--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chart.js": "^2.8.0",
     "jquery": "^3.4.1",
     "ng2-charts": "^2.3.0",
+    "ngx-infinite-scroll": "^8.0.0",
     "ngx-spinner": "^8.0.3",
     "ngx-toastr": "^10.0.4",
     "popper.js": "^1.15.0",
