--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.2",
+    "@angular/animations": "^8.2.8",
     "@angular/cdk": "^7.0.0",
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
@@ -27,6 +27,7 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "jquery": "^3.4.1",
+    "ng-pick-datetime": "^7.0.0",
     "ng2-charts": "^2.3.0",
     "ngx-infinite-scroll": "^8.0.0",
     "ngx-spinner": "^8.0.3",
