--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
+    "html2canvas": "^1.0.0-rc.5",
     "jquery": "^3.4.1",
     "ng-pick-datetime": "^7.0.0",
     "ng2-charts": "^2.3.0",
     "ngx-infinite-scroll": "^8.0.0",
     "ngx-spinner": "^8.0.3",
     "ngx-toastr": "^10.0.4",
+    "pdfmake": "^0.1.60",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
